--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aws-response",
-  "version": "1.5.0",
+  "version": "1.5.1",
   "description": "Aws response handler",
   "main": "lib/index.js",
   "scripts": {
@@ -21,5 +21,8 @@
     "mocha": "^3.2.0"
   },
   "author": "Mark mail.ormark@gmail.com",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "lowercase-keys": "^1.0.0"
+  }
 }
