--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "aws-response",
-  "version": "1.5.1",
-  "description": "Aws response handler",
+  "version": "1.6.0",
+  "description": "AWS response handler",
   "main": "lib/index.js",
   "scripts": {
     "lint": "eslint .",
@@ -20,8 +20,15 @@
     "husky": "^0.13.3",
     "mocha": "^3.2.0"
   },
-  "author": "Mark mail.ormark@gmail.com",
-  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Travelport-Ukraine/aws-response"
+  },
+  "contributors": [
+    "Mark Orel <mark.orel@travelport.ua>",
+    "Dmitry Chertousov <d.chertousov@travelport.ua>"
+  ],
+  "license": "SEE LICENSE IN LICENSE.md",
   "dependencies": {
     "lowercase-keys": "^1.0.0"
   }
